WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111076
Meta referrer isn't honored for window.open
https://bugs.webkit.org/show_bug.cgi?id=111076
Summary
Meta referrer isn't honored for window.open
Stuart Morgan
Reported
2013-02-28 06:41:33 PST
If a page has a meta referrer tag, and does a window.open, the meta referrer tag isn't honored for deciding what referrer to use. E.g., on an http page with referrer=origin, a window.open from the page is sending the whole source URL as the referrer, while an href with target="_blank" is sending only the origin as expected.
Attachments
Patch
(6.53 KB, patch)
2013-02-28 12:16 PST
,
jochen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
jochen
Comment 1
2013-02-28 10:51:09 PST
looking..
jochen
Comment 2
2013-02-28 12:16:53 PST
Created
attachment 190778
[details]
Patch
WebKit Review Bot
Comment 3
2013-02-28 13:47:55 PST
Comment on
attachment 190778
[details]
Patch Clearing flags on attachment: 190778 Committed
r144360
: <
http://trac.webkit.org/changeset/144360
>
WebKit Review Bot
Comment 4
2013-02-28 13:47:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug